[package]
name = "pigame"
version = "0.1.0"
edition = "2021"
description = "low dependency pi zero game engine (linux framebuffer)"
license = "MIT"
repository = "https://github.com/circles-png/pigame"
readme = "../README.md"
keywords = [
    "game",
    "embedded",
    "pi",
    "raspberry",
    "zero",
]
categories = [
    "game-engines",
    "embedded",
]

[dependencies]
fontdue = "0.9.0"
glam = "0.27.0"
libc = "0.2.154"
memmap = "0.7.0"
once_cell = "1.19.0"
rand = "0.8.5"
rust_gpiozero = "0.2.1"
strum = { version = "0.26.2", features = ["derive", "strum_macros"] }
thiserror = "1.0.60"
